# aec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rpi.toolchain
src/: audio_device.cpp  audio_device.h  main.cpp
